samples/_failures_safe/1761292135_ee7da1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dee464b0.c: In function ‘main’:
./samples/SAFE/__tmp_dee464b0.c:144:26: error: missing terminating " character
  144 |     mat2.rows = read_int("  Rows (1-10):
      |                          ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_dee464b0.c:144:5: error: expected expression at end of input
  144 |     mat2.rows = read_int("  Rows (1-10):
      |     ^~~~
./samples/SAFE/__tmp_dee464b0.c:144:17: error: too few arguments to function ‘read_int’
  144 |     mat2.rows = read_int("  Rows (1-10):
      |                 ^~~~~~~~
./samples/SAFE/__tmp_dee464b0.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_dee464b0.c:144:5: error: expected declaration or statement at end of input
  144 |     mat2.rows = read_int("  Rows (1-10):
      |     ^~~~
